[package]
name = "rustDoom"
version = "0.1.0"
edition = "2021"

[dependencies]
colored ="2.1.0"
chrono ="0.4.38"
zip = "2.2.0"
anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { path = "../vulkanalia", version = "=0.25.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"
#vulkanalia = "0.25.0"
stb_image = "0.3.0"

[[bin]]
name = "rustDoom"
path = "main.rs"